# tiskofy

./: .gitignore  README.md  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  styles.css.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: binaries.rs  downloader.rs  lib.rs  main.rs  util.rs
src/utils/: url.ts
