[package]
name = "Tiskofy"
version = "1.2.0"
description = "An application that extracts just the audio—saving it as MP3—from various streaming platforms."
authors = ["Seungha Kim"]
edition = "2021"

[lib]
name = "web_to_mp3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.5.1", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["stream", "blocking", "json"] }
zip = "2.4.2"
tokio-util = "0.7"
window-vibrancy = { version = "0.6.0" }
